<resources>
    <string name="app_name">AsApTempProvider</string>


    <!-- Tour screen-->
    <string name="tour">Tour</string>
    <string name="title_continue">Continue</string>
    <string name="tour_title_1">Grow</string>
    <string name="tour_title_2">Control</string>
    <string name="tour_title_3">Manage</string>

    <string name="tour_msg_1">grow your business. Meet new customer through Asap Temp</string>
    <string name="tour_msg_2">we send you relevant leads, Respond to the ones you like</string>
    <string name="tour_msg_3">Stay in touch with your clients. Track them with ease</string>


    <!-- LoginActivity-->
    <string name="let_s_start_with">Let\'s start with</string>
    <string name="login_explanation">Login!</string>
    <string name="enter_email_address">Enter Email Address.</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Tiwtter</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_now">Create Now</string>
    <string name="enter_password">Enter Password</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email_address_error">Please enter email address.</string>
    <string name="email_address_validate_error">Please enter Valid Email Address.</string>
    <string name="password_error">Please enter your password.</string>

    <item name="page_change_listener" type="id" />

    <!-- Register Activity-->
    <string name="register_explanation">Register!</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="and">and</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="user_name_error">Please enter your User Name.</string>
    <string name="mobile_number_error">Please enter your mobile number.</string>
    <string name="mobile_number_validate_error">Please enter your valid mobile number.</string>
    <string name="let_s_recovery_by">Let\'s Recovery by</string>
    <string name="email_explanation">Email!</string>


    <!--ForgotPasswordActivity-->
    <string name="send">Send</string>
    <string name="success">success</string>
    <string name="your_password_has_been_sent_to_your_email_address">Your password has been sent to your email address</string>
    <string name="success_explanation">Success!</string>


    <string name="map_api_key">AIzaSyBTSxqmF70TW8bNfVYtzxYnqub_y5uZ0YI</string>
    <string name="country">Country</string>
    <string name="job">Job</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="jobs">Jobs</string>
    <string name="title_new">New</string>
    <string name="ongoing">Ongoing</string>
</resources>
