<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_light"
	android:paddingStart="@dimen/_16sdp"
	android:paddingTop="@dimen/_0sdp"
	android:paddingEnd="@dimen/_16sdp"
	tools:context=".SignUpActivity"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

	<TextView
		android:id="@+id/lblStart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/_0sdp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="@dimen/_0sdp"
		android:fontFamily="@font/poppins_semi_bold"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="@dimen/_0sdp"
		android:text="@string/let_s_start_with"
		android:textColor="@color/colorBlue"
		android:textSize="@dimen/_22ssp"
		android:textStyle="normal" />

	<TextView
		android:id="@+id/lblStart1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/lblStart"
		android:fontFamily="@font/poppins_semi_bold"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="@dimen/_0sdp"
		android:text="@string/register_explanation"
		android:textColor="@color/colorBlue"
		android:textSize="@dimen/_22ssp"
		android:textStyle="normal" />


	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/linearLogin"
		android:layout_below="@+id/lblStart1"
		android:layout_marginTop="@dimen/_10sdp"
		android:background="@drawable/bg_rounded_rect_white_with_shadow"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:paddingTop="@dimen/_16sdp"
			android:paddingBottom="@dimen/_16sdp"
			android:paddingStart="@dimen/_16sdp"
			android:paddingEnd="@dimen/_16sdp">

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/txtInputUserName"
				android:theme="@style/TextLabel"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtUserName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/_12ssp"
					android:fontFamily="@font/poppins_medium"
					android:includeFontPadding="false"
					android:letterSpacing="0.1"
					android:lineSpacingExtra="@dimen/_0sdp"
					android:hint="@string/full_name"
					android:textColorHint="@color/colorAccent"
					android:inputType="textPersonName" />

			</com.google.android.material.textfield.TextInputLayout>

		<!--	<com.google.android.material.textfield.TextInputLayout
				style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/country"
				android:layout_marginTop="@dimen/_10sdp">

				<AutoCompleteTextView
					android:id="@+id/filled_exposed_dropdown"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:editable="false"
					android:labelFor="@id/filled_exposed_dropdown"/>

			</com.google.android.material.textfield.TextInputLayout>
-->
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/txtInputMobileNumber"
				android:theme="@style/TextLabel"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtMobileNumber"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_medium"
					android:includeFontPadding="false"
					android:letterSpacing="0.1"
					android:textSize="@dimen/_12ssp"
					android:lineSpacingExtra="@dimen/_0sdp"
					android:hint="@string/mobile_number"
					android:textColorHint="@color/colorAccent"
					android:inputType="textPhonetic" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/txtInputEmailAddress"
				android:theme="@style/TextLabel"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtEmailAddress"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_medium"
					android:includeFontPadding="false"
					android:letterSpacing="0.1"
					android:lineSpacingExtra="@dimen/_0sdp"
					android:hint="@string/email_address"
					android:textColorHint="@color/colorAccent"
					android:textSize="@dimen/_12ssp"
					android:inputType="textEmailAddress|textWebEmailAddress" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/txtInputPassword"
				android:theme="@style/TextLabel"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtPassword"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_medium"
					android:includeFontPadding="false"
					android:letterSpacing="0.1"
					android:lineSpacingExtra="@dimen/_0sdp"
					android:hint="@string/password"
					android:textSize="@dimen/_12ssp"
					android:textColorHint="@color/colorAccent"
					android:inputType="textPassword" />

			</com.google.android.material.textfield.TextInputLayout>

			<RelativeLayout
				android:id="@+id/relativeLogin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:gravity="center">

				<ProgressBar
					android:id="@+id/progressBarSignUp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="gone" />


				<Button
					android:id="@+id/btnSignUp"
					android:layout_width="match_parent"
					android:layout_height="@dimen/_40sdp"
					android:background="@drawable/bg_rounded_rect_orange"
					android:fontFamily="@font/poppins_bold"
					android:includeFontPadding="false"
					android:letterSpacing="0.1"
					android:lineSpacingExtra="@dimen/_0sdp"
					android:text="@string/register"
					android:textAllCaps="true"
					android:textColor="@color/colorWhite"
					android:textSize="@dimen/_16ssp"
					android:textStyle="bold" />

			</RelativeLayout>

			<TextView
				android:id="@+id/lblRegisterMsg1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_10sdp"
				android:fontFamily="@font/poppins_font_family"
				android:text="By clicking the Register button, you agree to our"
				android:textColor="@color/colorLightGray"
				android:textSize="@dimen/_9ssp"
				android:textStyle="normal" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/_1sdp"
				android:layout_marginBottom="@dimen/_1sdp"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/txtTerms"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_font_family"
					android:text="@string/terms_conditions"
					android:textColor="@color/colorPrimary"
					android:textSize="@dimen/_9ssp"
					android:textStyle="normal" />

				<TextView
					android:id="@+id/lblAnd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/_5sdp"
					android:layout_marginEnd="@dimen/_5sdp"
					android:fontFamily="@font/poppins_font_family"
					android:text="@string/and"
					android:textColor="@color/colorLightGray"
					android:textSize="@dimen/_9ssp"
					android:textStyle="normal" />

				<TextView
					android:id="@+id/txtPrivacy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/poppins_font_family"
					android:text="@string/privacy_policy"
					android:textColor="@color/colorPrimary"
					android:textSize="@dimen/_9ssp"
					android:textStyle="normal" />

			</LinearLayout>


		</LinearLayout>

	</ScrollView>


	<LinearLayout
		android:id="@+id/linearLogin"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="@dimen/_20sdp"
		android:layout_marginBottom="@dimen/_minus10sdp"
		android:background="@drawable/bg_rounded_rect_white_with_shadow"
		android:gravity="center"
		android:minHeight="@dimen/_60sdp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/lblLoginMsg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/poppins_medium"
			android:text="@string/already_have_an_account"
			android:textColor="@color/colorLightGray"
			android:textSize="@dimen/_13ssp"
			android:textStyle="normal" />

		<TextView
			android:id="@+id/lblLoginMsg1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/_5sdp"
			android:layout_marginEnd="@dimen/_5sdp"
			android:fontFamily="@font/poppins_medium"
			android:includeFontPadding="false"
			android:letterSpacing="0"
			android:lineSpacingExtra="@dimen/_0sdp"
			android:gravity="start"
			android:text="@string/login"
			android:textColor="@color/colorPrimary"
			android:textSize="@dimen/_13ssp"
			android:textStyle="normal" />

	</LinearLayout>


</RelativeLayout>