<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/linearContinue"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:layout_gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/_20sdp"
	android:background="@drawable/bg_dialog">

	<ImageView
		android:id="@+id/imgSuccess"
		android:layout_width="@dimen/_70sdp"
		android:layout_height="@dimen/_70sdp"
		android:layout_marginTop="@dimen/_10sdp"
		app:srcCompat="@drawable/ic_success"
		android:contentDescription="@string/success" />

	<com.asaptemp.provider.utils.CustomTextView
		android:id="@+id/txtTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_20sdp"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="@dimen/_0sdp"
		android:text="@string/success_explanation"
		android:textColor="@color/colorGreen"
		app:font_name="poppins_regular"
		android:textSize="@dimen/_24ssp" />

	<com.asaptemp.provider.utils.CustomTextView
		android:id="@+id/txtMsg"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_20sdp"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="@dimen/_0sdp"
		android:gravity="center"
		android:text="@string/your_password_has_been_sent_to_your_email_address"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="@dimen/_13ssp"
		android:textStyle="normal"
		app:font_name="poppins_regular"/>


	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constrainContinue"
		android:layout_width="match_parent"
		android:layout_height="62dp"
		android:layout_marginStart="@dimen/_16sdp"
		android:layout_marginTop="@dimen/_20sdp"
		android:layout_marginEnd="@dimen/_16sdp"
		android:background="@drawable/bg_rounded_rect_orange"
		android:orientation="horizontal">


		<com.asaptemp.provider.utils.CustomTextView
			android:id="@+id/txtContinue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginStart="@dimen/_0sdp"
			android:layout_marginTop="@dimen/_0sdp"
			android:layout_marginEnd="@dimen/_0sdp"
			android:layout_marginBottom="@dimen/_0sdp"
			android:gravity="center"
			android:includeFontPadding="false"
			android:letterSpacing="0.1"
			android:lineSpacingExtra="@dimen/_0sdp"
			android:text="@string/title_continue"
			android:textAllCaps="true"
			android:textColor="@color/colorWhite"
			android:textSize="@dimen/_14ssp"
			android:textStyle="bold"
			app:font_name="poppins_regular"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.500"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.384" />

		<ImageView
			android:id="@+id/imgCircle"
			android:layout_width="@dimen/_20sdp"
			android:layout_height="@dimen/_20sdp"
			android:layout_gravity="end"
			android:layout_marginStart="@dimen/_50sdp"
			android:layout_marginTop="@dimen/_0sdp"
			android:layout_marginEnd="@dimen/_16sdp"
			android:layout_marginBottom="@dimen/_0sdp"
			android:background="@drawable/ic_btn_arrow"
			android:contentDescription="@string/app_name"
			android:scaleType="fitCenter"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/txtContinue"
			app:layout_constraintTop_toTopOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>