<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_light"
	android:orientation="vertical"
	tools:context=".forgotPassword.ForgotPasswordActivity"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbarForgotPassword"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@android:color/transparent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:navigationIcon="@drawable/ic_back_black"
		app:popupTheme="@style/AppTheme.PopupOverlay"
		app:titleTextColor="@color/colorWhite" />


	<ImageView
		android:layout_width="@dimen/_150sdp"
		android:layout_height="@dimen/_150sdp"
		android:layout_gravity="center_horizontal"
		android:layout_marginStart="@dimen/_16sdp"
		android:layout_marginEnd="@dimen/_16sdp"
		app:srcCompat="@drawable/ic_password_mail" />

	<com.asaptemp.provider.utils.CustomTextView
		android:id="@+id/lblStart"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/_16sdp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="@dimen/_16sdp"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="@dimen/_0sdp"
		android:text="@string/let_s_recovery_by"
		android:textColor="@color/colorBlue"
		android:textSize="@dimen/_22ssp"
		android:textStyle="bold"
		app:font_name="poppins_bold"/>

	<com.asaptemp.provider.utils.CustomTextView
		android:id="@+id/lblStart1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/_16sdp"
		android:layout_marginEnd="@dimen/_16sdp"
		android:fontFamily="@font"
		android:includeFontPadding="false"
		android:letterSpacing="0"
		android:lineSpacingExtra="0dp"
		android:text="@string/email_explanation"
		android:textColor="@color/colorBlue"
		android:textSize="@dimen/_22ssp"
		android:textStyle="bold"
		app:font_name="poppins_bold"/>

	<LinearLayout
		android:id="@+id/linearTop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/_16sdp"
		android:layout_marginTop="@dimen/_20sdp"
		android:layout_marginEnd="@dimen/_16sdp"
		android:background="@drawable/bg_rounded_rect_white_with_shadow"
		android:elevation="@dimen/_10sdp"
		android:orientation="vertical"
		android:outlineAmbientShadowColor="@color/colorWhite"
		android:outlineSpotShadowColor="@color/colorWhite"
		android:padding="@dimen/_16sdp">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/txtInputEmailAddressForgotPassword"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:theme="@style/TextLabel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp">

			<com.asaptemp.provider.utils.CustomEditText
				android:id="@+id/edtEmailAddressForgotPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:includeFontPadding="false"
				android:letterSpacing="0.1"
				android:textSize="@dimen/_11ssp"
				android:lineSpacingExtra="@dimen/_0sdp"
				android:hint="@string/email_address"
				android:textColorHint="@color/colorAccent"
				android:imeOptions="actionDone"
				android:inputType="textEmailAddress|textWebEmailAddress"
				app:font_name="poppins_bold" />

		</com.google.android.material.textfield.TextInputLayout>


		<RelativeLayout
			android:id="@+id/relativeSend"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/_20sdp"
			android:gravity="center"
			app:layout_constraintEnd_toEndOf="@+id/txtInputPassword"
			app:layout_constraintHorizontal_bias="0.619"
			app:layout_constraintStart_toStartOf="@+id/txtInputPassword"
			app:layout_constraintTop_toBottomOf="@+id/txtInputPassword">

			<ProgressBar
				android:id="@+id/progressBarForgot"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone" />


			<com.asaptemp.provider.utils.CustomButton
				android:id="@+id/btnSendForgotPassword"
				android:layout_width="match_parent"
				android:layout_height="@dimen/_40sdp"
				android:background="@drawable/bg_rounded_rect_orange"
				android:includeFontPadding="false"
				android:letterSpacing="0.1"
				android:lineSpacingExtra="@dimen/_0sdp"
				android:text="@string/send"
				android:textAllCaps="true"
				android:textColor="@color/colorWhite"
				android:textSize="@dimen/_16ssp"
				android:textStyle="bold"
				app:font_name="poppins_regular"/>

		</RelativeLayout>


	</LinearLayout>

</LinearLayout>